Imported from https://SruthiK123@github.com/SruthiK123/Test.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,21 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[access "refs/*"]
+	owner = group user/SruthiK123
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/SruthiK123
+	label-Verified = -1..+1 group user/SruthiK123
+	push = group user/SruthiK123
+	read = group user/SruthiK123
+	rebase = group user/SruthiK123
+	removeReviewer = group user/SruthiK123
+	submit = group user/SruthiK123
+[access "refs/heads/*"]
+	create = group user/SruthiK123
+	push = +force group user/SruthiK123
+	pushMerge = group user/SruthiK123
+	read = group user/SruthiK123
+[access "refs/tags/*"]
+	push = group user/SruthiK123
+	push = +force group user/SruthiK123
